[NAE-1617] Authority refactor
- removed Authorization annotation from method and enabled multiple Authorize annotation on methods